core/gen/SplikitParser.py
# Generated from core/Splikit.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SplikitParser ( Parser ):

    grammarFileName = "Splikit.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'func'", "'('", "')'", "'{'", 
                     "'}'", "'=>'", "'::'", "'enum'", "'class'", "'if'", 
                     "'else'", "'import'", "','", "'*'", "'while'", "'.'", 
                     "'!'", "'+'", "'-'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'&'", "'|'", "<INVALID>", 
                     "<INVALID>", "'''", "<INVALID>", "<INVALID>", "'nil'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IntegerLiteral", 
                      "DecimalLiteral", "Apostrophe", "StringLiteral", "BooleanLiteral", 
                      "NilLiteral", "Comment", "MultiLineComment", "Identifier", 
                      "Digit", "Whitespace" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variableDeclaration = 2
    RULE_functionDeclaration = 3
    RULE_enumDeclaration = 4
    RULE_clsFuncDeclaration = 5
    RULE_classDeclarations = 6
    RULE_classDeclaration = 7
    RULE_functionCall = 8
    RULE_ifStatement = 9
    RULE_importStatement = 10
    RULE_whileStatement = 11
    RULE_parameterList = 12
    RULE_argumentList = 13
    RULE_getAttr = 14
    RULE_expression = 15
    RULE_primaryExpression = 16
    RULE_atomExpression = 17
    RULE_operator = 18

    ruleNames =  [ "program", "statement", "variableDeclaration", "functionDeclaration", 
                   "enumDeclaration", "clsFuncDeclaration", "classDeclarations", 
                   "classDeclaration", "functionCall", "ifStatement", "importStatement", 
                   "whileStatement", "parameterList", "argumentList", "getAttr", 
                   "expression", "primaryExpression", "atomExpression", 
                   "operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    IntegerLiteral=31
    DecimalLiteral=32
    Apostrophe=33
    StringLiteral=34
    BooleanLiteral=35
    NilLiteral=36
    Comment=37
    MultiLineComment=38
    Identifier=39
    Digit=40
    Whitespace=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.StatementContext)
            else:
                return self.getTypedRuleContext(SplikitParser.StatementContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SplikitParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                self.state = 38
                self.statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(SplikitParser.VariableDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(SplikitParser.FunctionDeclarationContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SplikitParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SplikitParser.WhileStatementContext,0)


        def importStatement(self):
            return self.getTypedRuleContext(SplikitParser.ImportStatementContext,0)


        def enumDeclaration(self):
            return self.getTypedRuleContext(SplikitParser.EnumDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(SplikitParser.ClassDeclarationContext,0)


        def expression(self):
            return self.getTypedRuleContext(SplikitParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SplikitParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.functionDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.importStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.enumDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 50
                self.classDeclaration()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 51
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SplikitParser.Identifier, 0)

        def expression(self):
            return self.getTypedRuleContext(SplikitParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = SplikitParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(SplikitParser.Identifier)
            self.state = 55
            self.match(SplikitParser.T__0)
            self.state = 56
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SplikitParser.Identifier)
            else:
                return self.getToken(SplikitParser.Identifier, i)

        def parameterList(self):
            return self.getTypedRuleContext(SplikitParser.ParameterListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.StatementContext)
            else:
                return self.getTypedRuleContext(SplikitParser.StatementContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_functionDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = SplikitParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(SplikitParser.T__1)
                self.state = 59
                self.match(SplikitParser.Identifier)
                self.state = 60
                self.match(SplikitParser.T__2)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==39:
                    self.state = 61
                    self.parameterList()


                self.state = 64
                self.match(SplikitParser.T__3)
                self.state = 65
                self.match(SplikitParser.T__4)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                    self.state = 66
                    self.statement()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 72
                self.match(SplikitParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(SplikitParser.Identifier)
                self.state = 74
                self.match(SplikitParser.T__2)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==39:
                    self.state = 75
                    self.parameterList()


                self.state = 78
                self.match(SplikitParser.T__3)
                self.state = 79
                self.match(SplikitParser.T__6)
                self.state = 80
                self.match(SplikitParser.T__4)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                    self.state = 81
                    self.statement()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 87
                self.match(SplikitParser.T__5)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(SplikitParser.T__1)
                self.state = 89
                self.match(SplikitParser.Identifier)
                self.state = 90
                self.match(SplikitParser.T__7)
                self.state = 91
                self.match(SplikitParser.Identifier)
                self.state = 92
                self.match(SplikitParser.T__2)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==39:
                    self.state = 93
                    self.parameterList()


                self.state = 96
                self.match(SplikitParser.T__3)
                self.state = 97
                self.match(SplikitParser.T__4)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                    self.state = 98
                    self.statement()
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 104
                self.match(SplikitParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SplikitParser.Identifier, 0)

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(SplikitParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_enumDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumDeclaration" ):
                return visitor.visitEnumDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def enumDeclaration(self):

        localctx = SplikitParser.EnumDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enumDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(SplikitParser.T__8)
            self.state = 108
            self.match(SplikitParser.Identifier)
            self.state = 109
            self.match(SplikitParser.T__4)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 110
                self.variableDeclaration()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(SplikitParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClsFuncDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SplikitParser.Identifier, 0)

        def parameterList(self):
            return self.getTypedRuleContext(SplikitParser.ParameterListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.StatementContext)
            else:
                return self.getTypedRuleContext(SplikitParser.StatementContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_clsFuncDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClsFuncDeclaration" ):
                return visitor.visitClsFuncDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def clsFuncDeclaration(self):

        localctx = SplikitParser.ClsFuncDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_clsFuncDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(SplikitParser.T__1)
            self.state = 119
            self.match(SplikitParser.Identifier)
            self.state = 120
            self.match(SplikitParser.T__2)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 121
                self.parameterList()


            self.state = 124
            self.match(SplikitParser.T__3)
            self.state = 125
            self.match(SplikitParser.T__4)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                self.state = 126
                self.statement()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(SplikitParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clsFuncDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.ClsFuncDeclarationContext)
            else:
                return self.getTypedRuleContext(SplikitParser.ClsFuncDeclarationContext,i)


        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(SplikitParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_classDeclarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclarations" ):
                return visitor.visitClassDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def classDeclarations(self):

        localctx = SplikitParser.ClassDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classDeclarations)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 134
                    self.clsFuncDeclaration()
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 140
                    self.variableDeclaration()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SplikitParser.Identifier, 0)

        def classDeclarations(self):
            return self.getTypedRuleContext(SplikitParser.ClassDeclarationsContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_classDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = SplikitParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(SplikitParser.T__9)
            self.state = 149
            self.match(SplikitParser.Identifier)
            self.state = 150
            self.match(SplikitParser.T__4)
            self.state = 151
            self.classDeclarations()
            self.state = 152
            self.match(SplikitParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SplikitParser.Identifier, 0)

        def argumentList(self):
            return self.getTypedRuleContext(SplikitParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return SplikitParser.RULE_functionCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = SplikitParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(SplikitParser.Identifier)
            self.state = 155
            self.match(SplikitParser.T__2)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457611304) != 0):
                self.state = 156
                self.argumentList()


            self.state = 159
            self.match(SplikitParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SplikitParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.StatementContext)
            else:
                return self.getTypedRuleContext(SplikitParser.StatementContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SplikitParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(SplikitParser.T__10)
            self.state = 162
            self.expression()
            self.state = 163
            self.match(SplikitParser.T__4)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                self.state = 164
                self.statement()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170
            self.match(SplikitParser.T__5)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 171
                self.match(SplikitParser.T__11)
                self.state = 172
                self.match(SplikitParser.T__4)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                    self.state = 173
                    self.statement()
                    self.state = 178
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 179
                self.match(SplikitParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self, i:int=None):
            if i is None:
                return self.getTokens(SplikitParser.StringLiteral)
            else:
                return self.getToken(SplikitParser.StringLiteral, i)

        def getRuleIndex(self):
            return SplikitParser.RULE_importStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = SplikitParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(SplikitParser.T__12)
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.state = 183
                self.match(SplikitParser.T__4)
                self.state = 184
                self.match(SplikitParser.StringLiteral)
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 185
                    self.match(SplikitParser.T__13)
                    self.state = 186
                    self.match(SplikitParser.StringLiteral)
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 192
                self.match(SplikitParser.T__5)
                pass
            elif token in [15]:
                self.state = 193
                self.match(SplikitParser.T__14)
                pass
            elif token in [34]:
                pass
            else:
                pass
            self.state = 196
            self.match(SplikitParser.StringLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SplikitParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.StatementContext)
            else:
                return self.getTypedRuleContext(SplikitParser.StatementContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SplikitParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(SplikitParser.T__15)
            self.state = 199
            self.expression()
            self.state = 200
            self.match(SplikitParser.T__4)
            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 676457688620) != 0):
                self.state = 201
                self.statement()
                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 207
            self.match(SplikitParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SplikitParser.Identifier)
            else:
                return self.getToken(SplikitParser.Identifier, i)

        def getRuleIndex(self):
            return SplikitParser.RULE_parameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = SplikitParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.match(SplikitParser.Identifier)
            self.state = 214
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 210
                self.match(SplikitParser.T__13)
                self.state = 211
                self.match(SplikitParser.Identifier)
                self.state = 216
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SplikitParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SplikitParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SplikitParser.RULE_argumentList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentList" ):
                return visitor.visitArgumentList(self)
            else:
                return visitor.visitChildren(self)




    def argumentList(self):

        localctx = SplikitParser.ArgumentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_argumentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self.expression()
            self.state = 222
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 218
                self.match(SplikitParser.T__13)
                self.state = 219
                self.expression()
                self.state = 224
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetAttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(SplikitParser.PrimaryExpressionContext,0)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SplikitParser.Identifier)
            else:
                return self.getToken(SplikitParser.Identifier, i)
